// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostAppearedCharacter snapshot renders 1`] = `
<div>
  <div
    className="quesText mb-4"
  >
    What character(person) appeared in the most of StarWar Films ?
  </div>
  <div
    className="ansText mb-4"
  >
    test
  </div>
</div>
`;

exports[`MostNumberOfPilots snapshot renders 1`] = `
<div>
  <div
    className="quesText mb-4"
  >
    What planet in Star Wars universe provided largest number of vehicle pilots (Top 5) ?
  </div>
  <div
    className="ansText mb-4"
  >
    Planet : 
    Tatooine
     - Pilots : (
    19
    ) -
    <span>
       
      Chewbacca - Wookie
       , 
    </span>
    <span>
       
      Nien Nunb - Sullustan
      
    </span>
  </div>
</div>
`;

exports[`MostNumberOfSpecies snapshot renders 1`] = `
<div>
  <div
    className="quesText mb-4"
  >
    What species appeared in the most number of StarWars films (Top 5) ?
  </div>
  <div
    className="ansText mb-4"
  >
    Human
     (
    4
    )
  </div>
</div>
`;

exports[`MovieTitle snapshot renders 1`] = `
<div>
  <div
    className="quesText mb-4"
  >
    Which of all StarWars movies has longest opening crawl ?
  </div>
  <div
    className="ansText mb-4"
  >
    test
  </div>
</div>
`;
